--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
         <item>Class Schedule</item>
     </string-array>
     <string-array name="nav_drawer_items">
+        <item>News</item>
         <item>Announcements</item>
         <item>Emergency Call</item>
         <item>Log Out</item>
